--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
         }
     },
     "require": {
-        "vlucas/phpdotenv": "^5.4"
+        "vlucas/phpdotenv": "^5.4",
+        "phpmailer/phpmailer": "^6.6",
+        "sendgrid/sendgrid": "^8.0"
     }
 }
