--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ API_SECRET=
 BASE_URL_API_WHMCS=
 URL_SEND_POST=
 SENDGRID_API_KEY=
-HOST=
-DATABASE=
-PASSWORD=
-USER=
+DB_HOST=
+DB_DATABASE=
+DB_PASSWORD=
+DB_USERNAME=
